--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body {
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 .center {
     width: 100%;
     display: flex;
@@ -92,42 +96,21 @@ body {
 }
 
 .skills_info {
-    width: 870px;
-    height: 450px;
+    display: flex;
+    width: 900px;
     padding: 15px;
-    border: 2px solid #DEDEDE;
-    background-color: #ffffff;
+    gap: 15px;
 }
 
-.skills_info {
+.skills_info_top {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
     gap: 30px;
-}
-
-.skills_info_html {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background: conic-gradient(gray 70%, rgb(245, 245, 245) 0%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-    position: relative;
-}
-
-.skills_info_html::after {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    content: "70%";
-    width: 80%;
-    height: 80%;
-    background: white;
-    border-radius: 50%;
-    position: absolute;
+    border: 2px solid #DEDEDE;
+    background-color: #ffffff;
+    padding: 15px;
 }
 
 .skills_info_title {
@@ -137,11 +120,11 @@ body {
     color: gray;
 }
 
-.skills_info_javascript {
+.skills_info_responsible {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: conic-gradient(gray 40%, rgb(245, 245, 245) 0%);
+    background: conic-gradient(#007ACB 90%, rgb(245, 245, 245) 0%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -149,11 +132,11 @@ body {
     position: relative;
 }
 
-.skills_info_javascript::after {
+.skills_info_responsible::after {
     display: flex;
     align-items: center;
     justify-content: center;
-    content: "40%";
+    content: "90%";
     width: 80%;
     height: 80%;
     background: white;
@@ -161,11 +144,11 @@ body {
     position: absolute;
 }
 
-.skills_info_laravel {
+.skills_info_sociable {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: conic-gradient(gray 40%, rgb(245, 245, 245) 0%);
+    background: conic-gradient(#007ACB 90%, rgb(245, 245, 245) 0%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -173,11 +156,11 @@ body {
     position: relative;
 }
 
-.skills_info_laravel::after {
+.skills_info_sociable::after {
     display: flex;
     align-items: center;
     justify-content: center;
-    content: "40%";
+    content: "90%";
     width: 80%;
     height: 80%;
     background: white;
@@ -185,11 +168,11 @@ body {
     position: absolute;
 }
 
-.skills_info_python {
+.skills_info_english {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: conic-gradient(gray 40%, rgb(245, 245, 245) 0%);
+    background: conic-gradient(#007ACB 20%, rgb(245, 245, 245) 0%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -197,11 +180,11 @@ body {
     position: relative;
 }
 
-.skills_info_python::after {
+.skills_info_english::after {
     display: flex;
     align-items: center;
     justify-content: center;
-    content: "40%";
+    content: "A2";
     width: 80%;
     height: 80%;
     background: white;
@@ -209,50 +192,168 @@ body {
     position: absolute;
 }
 
-.skills_info_react {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background: conic-gradient(gray 25%, rgb(245, 245, 245) 0%);
+.skills_info_box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.skills_info_box_mid {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    border: 2px solid #DEDEDE;
+    background-color: #ffffff;
+    padding: 15px 15px 0 15px;
+}
+
+.skills_info_box_mid_left {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.skills_info_box_mid_right {
+    display: flex;
+}
+
+.skills_info_box_mid_left_info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.skills_info_box_mid_left_html_bar {
+    width: 100%;
+    height: 10px;
+    background: #f5f5f5;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: bold;
     position: relative;
 }
 
-.skills_info_react::after {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    content: "25%";
-    width: 80%;
-    height: 80%;
-    background: white;
-    border-radius: 50%;
+.skills_info_box_mid_left_html_bar::after {
+    width: 70%;
+    height: 10px;
+    background: #007ACB;
     position: absolute;
+    content: "";
+    left: 0;
 }
 
-.skills_info_mysql {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background: conic-gradient(gray 25%, rgb(245, 245, 245) 0%);
+.skills_info_box_mid_left_javascript_bar {
+    width: 100%;
+    height: 10px;
+    background: #f5f5f5;
     display: flex;
     align-items: center;
     justify-content: center;
-    font-weight: bold;
     position: relative;
 }
 
-.skills_info_mysql::after {
+.skills_info_box_mid_left_javascript_bar::after {
+    width: 40%;
+    height: 10px;
+    background: #007ACB;
+    position: absolute;
+    content: "";
+    left: 0;
+}
+
+.skills_info_box_mid_left_laravel_bar {
+    width: 100%;
+    height: 10px;
+    background: #f5f5f5;
     display: flex;
     align-items: center;
     justify-content: center;
-    content: "25%";
-    width: 80%;
-    height: 80%;
-    background: white;
-    border-radius: 50%;
+    position: relative;
+}
+
+.skills_info_box_mid_left_laravel_bar::after {
+    width: 40%;
+    height: 10px;
+    background: #007ACB;
     position: absolute;
+    content: "";
+    left: 0;
+}
+
+.skills_info_box_mid_left_python_bar {
+    width: 100%;
+    height: 10px;
+    background: #f5f5f5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.skills_info_box_mid_left_python_bar::after {
+    width: 40%;
+    height: 10px;
+    background: #007ACB;
+    position: absolute;
+    content: "";
+    left: 0;
+}
+
+.skills_info_box_mid_left_react_bar {
+    width: 100%;
+    height: 10px;
+    background: #f5f5f5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.skills_info_box_mid_left_react_bar::after {
+    width: 20%;
+    height: 10px;
+    background: #007ACB;
+    position: absolute;
+    content: "";
+    left: 0;
+}
+
+.skills_info_box_mid_left_mysql_bar {
+    width: 100%;
+    height: 10px;
+    background: #f5f5f5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.skills_info_box_mid_left_mysql_bar::after {
+    width: 30%;
+    height: 10px;
+    background: #007ACB;
+    position: absolute;
+    content: "";
+    left: 0;
+}
+.skills_info_bot{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.skills_info_bot_box {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    border: 2px solid #DEDEDE;
+    background-color: #ffffff;
+    padding: 15px;
+}
+
+.skills_info_bot_box_python {
+    display: flex;
 }
