--- a/style.css
+++ b/style.css
@@ -339,6 +339,25 @@ a {
     left: 0;
 }
 
+.skills_info_box_mid_left_git_bar {
+    width: 100%;
+    height: 10px;
+    background: #f5f5f5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.skills_info_box_mid_left_git_bar::after {
+    width: 50%;
+    height: 10px;
+    background: #007ACB;
+    position: absolute;
+    content: "";
+    left: 0;
+}
+
 .skills_info_bot {
     width: 596px;
     display: flex;
@@ -396,6 +415,7 @@ a {
     justify-content: space-between;
     flex-wrap: wrap;
     align-items: center;
+    gap: 20px;
 }
 
 .education_info_box {
@@ -428,6 +448,23 @@ a {
     padding: 50px 0 10px 0;
     color: gray;
 }
-.education_info_box_desc{
-    font-size: 14px;
+
+.education_info_box_desc {
+    font-size: 16px;
+}
+
+.education_info_box_sertificat {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    
+}
+.education_info_box_sertificat_text{
+    font-size: 28px;
+    color: #007ACB;
+}
+
+.education_info_box_sertificat_text:hover {
+    color: coral;
 }
