--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ a {
     padding: 15px;
     border: 2px solid #DEDEDE;
     background-color: #ffffff;
+    box-shadow: 0px 1px 7px 3px #dedede;
 }
 
 .infocart_left {
@@ -112,6 +113,7 @@ a {
     background-color: #ffffff;
     padding: 15px;
     align-items: center;
+    box-shadow: 0px 1px 7px 3px #dedede;
 }
 
 .skills_info_title {
@@ -207,6 +209,7 @@ a {
     border: 2px solid #DEDEDE;
     background-color: #ffffff;
     padding: 15px 15px 0 15px;
+    box-shadow: 0px 1px 7px 3px #dedede;
 }
 
 .skills_info_box_mid_left {
@@ -373,6 +376,7 @@ a {
     padding: 15px;
     justify-content: space-around;
     font-size: 18px;
+    box-shadow: 0px 1px 7px 3px #dedede;
 }
 
 .skills_info_bot_box_python {
@@ -427,6 +431,7 @@ a {
     background-color: #ffffff;
     padding: 15px;
     position: relative;
+    box-shadow: 0px 1px 7px 3px #dedede;
 }
 
 .education_info_box_date {
