--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 196px;
+    width: 200px;
+    height: 200px;
     border: 2px solid #DEDEDE;
 }
 
@@ -53,6 +54,8 @@ a {
 
 .infocart_right_specialisation {
     padding-bottom: 20px;
+    color: gray;
+    font-size: 20px;
 }
 
 .infocart_right_desc {
