--- a/style.css
+++ b/style.css
@@ -146,14 +146,14 @@ a {
     width: 566px;
     height: 100%;
     display: flex;
-    justify-content: space-around;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 45px;
     border: 2px solid #DEDEDE;
     background-color: #ffffff;
     padding: 15px;
     align-items: center;
     box-shadow: 0px 1px 7px 3px #dedede;
+    justify-content: space-evenly;
 }
 
 .skills_info_title {
@@ -191,7 +191,7 @@ a {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: conic-gradient(#007ACB 90%, rgb(245, 245, 245) 0%);
+    background: conic-gradient(#007ACB 70%, rgb(245, 245, 245) 0%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -203,6 +203,30 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    content: "70%";
+    width: 80%;
+    height: 80%;
+    background: white;
+    border-radius: 50%;
+    position: absolute;
+}
+
+.skills_info_training {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: conic-gradient(#007ACB 90%, rgb(245, 245, 245) 0%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    position: relative;
+}
+
+.skills_info_training::after {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     content: "90%";
     width: 80%;
     height: 80%;
@@ -211,11 +235,11 @@ a {
     position: absolute;
 }
 
-.skills_info_english {
+.skills_info_purposefulness {
     width: 100px;
     height: 100px;
     border-radius: 50%;
-    background: conic-gradient(#007ACB 20%, rgb(245, 245, 245) 0%);
+    background: conic-gradient(#007ACB 85%, rgb(245, 245, 245) 0%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -223,11 +247,59 @@ a {
     position: relative;
 }
 
-.skills_info_english::after {
+.skills_info_purposefulness::after {
     display: flex;
     align-items: center;
     justify-content: center;
-    content: "A2";
+    content: "85%";
+    width: 80%;
+    height: 80%;
+    background: white;
+    border-radius: 50%;
+    position: absolute;
+}
+
+.skills_info_flexibility {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: conic-gradient(#007ACB 90%, rgb(245, 245, 245) 0%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    position: relative;
+}
+
+.skills_info_flexibility::after {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    content: "90%";
+    width: 80%;
+    height: 80%;
+    background: white;
+    border-radius: 50%;
+    position: absolute;
+}
+
+.skills_info_Self_discipline {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background: conic-gradient(#007ACB 90%, rgb(245, 245, 245) 0%);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    position: relative;
+}
+
+.skills_info_Self_discipline::after {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    content: "90%";
     width: 80%;
     height: 80%;
     background: white;
@@ -406,43 +478,6 @@ a {
     display: flex;
     flex-direction: column;
     gap: 15px;
-}
-
-.skills_info_bot_box {
-    width: 566px;
-    display: flex;
-    border: 2px solid #DEDEDE;
-    background-color: #ffffff;
-    padding: 15px;
-    justify-content: space-around;
-    font-size: 18px;
-    box-shadow: 0px 1px 7px 3px #dedede;
-}
-
-.skills_info_bot_box_python {
-    display: flex;
-    flex-direction: column;
-}
-
-.link_coral {
-    color: #007ACB;
-}
-
-.link_coral:hover {
-    color: coral;
-}
-
-.auth {
-    display: flex;
-    flex-direction: column;
-}
-
-.auth_text {
-    color: #007ACB;
-}
-
-.auth_t {
-    display: flex;
 }
 
 .education {
